--- a/FOJ.App/app/index.html
+++ b/FOJ.App/app/index.html
@@ -35,8 +35,8 @@
             </a>
         </div>
 
-        <ul class="nav navbar-nav navbar-right">
-          <button class="btn btn-success navbar-btn">Post a job</button>
+        <ul class="nav navbar-nav navbar-right" ng-hide="jobPreview" >
+          <a href="#/new" class="btn btn-success" role="button" style="margin-top:10px">Post a job</a>
         </ul>
       </div><!-- /.container-fluid -->
     </nav>
@@ -49,7 +49,7 @@
     <div class="footer">
       <div class="container text-center">
         <a href="#/about">About</a>
-        <a href="https://twitter.com/CommuteList">Twitter</a>
+        <a href="https://twitter.com/familyokjobs">Twitter</a>
       </div>
     </div>
     
